--- a/deck/grammar.yml
+++ b/deck/grammar.yml
@@ -147,3 +147,32 @@
 - name: 形容词连体形的用法
   glance: 形容词的活用用法
   content: 连体形是形容词用于修饰名词时的变形，等同于原形。或者说，形容词修饰名词时使用原形。
+- name: 形容词て形
+  glance: 构造方法
+  content: |
+    い形和动词类似，是经过连体形构造，即去掉结尾的「い」，加上「くて」。
+    な形和动词不同，直接去掉「な」，加上「で」。
+    形容词的て形一般用于表示并列和因果。
+- name: 形容词终止形
+  glance: 构造方法
+  content: 如果为い形，此时用形容词的原形。如果为な形，则将な变为だ。
+- name: 形容词假定形
+  glance: 变形方法
+  content: |
+    い形容词的假定形通过将「い」变成「ければ」来构造。
+    な形容词的假定形通过将「だ」变成「なら」来构造。
+- name: そこあど系指示词
+  content: |
+    前面的部分是：
+    - こ-：近称。表示**离说话人近**或属于说话人范围的事物。
+    - そ-：中称。表示**离听话人近**，或说话人和听话人都能看到但距离稍远的事物，或者是前面提到过的事物。
+    - あ-：远称。表示**离说话人和听话人都远**的事物，或者两人都知道的事物（超出双方当前的范围，但双方都能理解）。
+    - ど-：不定称。表示疑问。
+
+    后面的部分是：
+    - -れ：指示代词，指代东西。
+    - -こ：指示代词，指代地点。
+    - -ちら：指示代词，指代方向。
+    - -の：连体词，与名词结合，修饰紧挨着的名词。指示具体的事物。
+    - -んな：连体词，与名词结合，修饰紧挨着的名词。指示事物的性质、状态或类型。
+    - 变成长音：副词。描述方式、状态或情况，修饰动词、形容词、句子。
